--- a/public/pasuta_new.html
+++ b/public/pasuta_new.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>うどん</title>
+    <title>パスタ</title>
 </head>
 <body>
-    <form action="/udon" method="POST">
+    <form action="/pasuta" method="POST">
 
         <input type="text" name="name" required>
         <label for="name">name:</label><br>
